exports[`test handles AUTH_CHANGE with user 1`] = `
Object {
  "authRequestMade": true,
  "uid": "unique-id",
}
`;

exports[`test handles AUTH_CHANGE without user 1`] = `
Object {
  "authRequestMade": true,
  "uid": null,
}
`;

exports[`test handles SIGN_IN_USER_FAIL 1`] = `
Object {
  "authRequestMade": false,
  "uid": null,
}
`;

exports[`test handles SIGN_IN_USER_SUCCESS 1`] = `
Object {
  "authRequestMade": false,
  "uid": "unique-id",
}
`;

exports[`test handles initial state 1`] = `
Object {
  "authRequestMade": false,
  "uid": null,
}
`;
